design fixes, not showing warning message for no catalogs

--- a/BookApp-SPA/src/app/ui-core/layout/layout.component.scss
+++ b/BookApp-SPA/src/app/ui-core/layout/layout.component.scss
@@ -1,3 +1,4 @@
 .router-outlet-wrapper {
   margin-top: 60px;
+  height: 100vh;
 }
